@@ -1,4 +1,5 @@
 v0.13
+	* FIX : The API doesn't like some zoom levels return from the name finder service, so fall back to a default in that case.
 	* ADD : Allow canvas background to be set from a style. Background color is still overridable in the global preferences. (closes #1333)
 	* FIX : Change URL in about dialog to merkaartor.org.
 	* FIX : Connection error reporting in name finder service. (sponsored by today's power outage;)
